--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
     margin: 0;
     font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
     color: #333;
+    background: #fff;
     overflow: hidden;
     display: block;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
   }
