--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -97,7 +97,7 @@
             transition: 0.3s ease all;
             position: relative;
             &:hover {
-                color: $secondary-color;
+                color: $primary-color;
             }
             @include breakpoint(md) {
                 display: none;
