--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,12 +6,17 @@
 
 .container {
     display: flex;
+    flex-direction: column;
+
+    @include breakpoint(md) {
+        flex-direction: row;
+    }
 
     .hero {
         display: block;
         text-align: center;
         padding: 0 8rem;
-        margin: 0;
+        margin-bottom: 4rem;
 
         @include breakpoint(md) {
             width: 50%;
@@ -30,15 +35,54 @@
     }
 
     .sequential-show {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: repeat(16, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        padding: 0 8rem;
+        margin: 0;
+
+        @include breakpoint(md) {
+            width: 50%;
+            padding: 0 4rem;
+            height: 16rem;
+        }
+
+        &__item1 {
+            grid-column: 3 / span 4;
+            grid-row: 1;
+        }
+        &__item2 {
+            grid-column: 7 / span 4;
+            grid-row: 1;
+        }
+        &__item3 {
+            grid-column: 11 / span 4;
+            grid-row: 1;
+        }
+        &__item4 {
+            grid-column: 1 / span 4;
+            grid-row: 2;
+        }
+        &__item5 {
+            grid-column: 5 / span 4;
+            grid-row: 2;
+        }
+        &__item6 {
+            grid-column: 9 / span 4;
+            grid-row: 2;
+        }
+        &__item7 {
+            grid-column: 13 / span 4;
+            grid-row: 2;
+        }
 
         .pulse {
             display: none;
         }
       
         .visible {
-            display: block;
+            display: flex;
+            justify-content: center;
             animation: pulse-animation 6s infinite;
         }
         
@@ -49,6 +93,10 @@
             50% {
                 opacity: 1;
             }
+        }
+
+        img {
+            width: 4rem;
         }
     }
 }
