--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #7286D3;
 $secondary-color: #FFB4B4;
 $accent: #9ED2BE;
 $bg: #fff;
+$emphasis: #FB2576;
 
 $spacing-md: 48px;
 $spacing-lg: 64px;
