--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -2,42 +2,54 @@
 
 .home-page {
     top: 40%;
-}
 
-.hero {
-    display: grid;
-    justify-content: center;
-    text-align: center;
-
-    @include breakpoint(md) {
-        width: 50%;
-    }
-
-    h1 {
-        font-size: 4rem;
-        margin-bottom: 2rem;
-    }
-
-    h2 {
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    ul {
-        list-style: none;
-        display: flex;
-        flex-direction: row;
+    .hero {
+        display: grid;
         justify-content: center;
-        padding: 0;
-        margin: 1rem 1rem;
+        text-align: center;
 
-        li {
-            margin-right: 2rem;
+        @include breakpoint(md) {
+            width: 50%;
+            margin: 0 20rem;
+        }
+
+        h1 {
+            font-size: 4rem;
+            margin-bottom: 2rem;
+
+            &.hello {
+                font-family: 'Lucida Console', 'Courier New', monospace;
+            }
+        }
+
+        h2 {
+            font-size: 2rem;
+            margin-bottom: 2rem;
+
+            .main-name {
+                font-size: 3rem;
+                background: -webkit-linear-gradient(left, #3F0071, $emphasis);
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+        }
+
+        ul {
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            padding: 0;
+
+            @include breakpoint(md) {
+                justify-content: flex-start;
+            }
+
+            li {
+                display: block;
+                margin: 0 2rem;
+            }
         }
     }
-}
-
-.social-icon {
-    color: $primary-color;
-    font-size: 4rem;
 }
