--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,3 +1,22 @@
+@import '../../scss/_variables.scss';
+
 .contact-page {
-    top: 40%;
+    top: 20%;
+    height: auto;
 }
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    margin: 2rem;
+    max-width: fit-content;
+    max-height: fit-content;
+    background-color: #fff;
+    border-color: #ccc;
+    border-radius: 16px;
+    box-shadow: 2px 2px 6px #bbb;
+}
+
