make minor updates to responsive behavior of text on home page

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,13 +4,13 @@
     top: 40%;
 
     .hero {
-        display: grid;
-        justify-content: center;
+        display: block;
         text-align: center;
 
         @include breakpoint(md) {
             width: 50%;
             margin: 0 20rem;
+            text-align: left;
         }
 
         h1 {
