--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,16 @@ $border-radius: 12px;
         @media (min-width: 48em) {
             @content;
         }
+    } @else if $point == lg {
+        // 1024px
+        @media (min-width: 64em) {
+            @content;
+        }
+    } @else if $point == xl {
+        // 1280px
+        @media (min-width: 80em) {
+            @content;
+        }
     }
 }
 
