--- a/src/components/Contact/ContactForm/index.scss
+++ b/src/components/Contact/ContactForm/index.scss
@@ -33,14 +33,14 @@
 .form-input {
     width: 92%;
     padding: 0.5rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--border-color);
     border-radius: 4px;
     font-size: 1rem;
 }
 
 .form-input:focus {
     outline: none;
-    border-color: $primary-color;
+    border-color: var(--emphasis-color);
 }
 
 
@@ -51,7 +51,7 @@
 
 .btn {
     &__submit {
-        background-color: $primary-color;
+        background-color: var(--primary-color);
         color: #fff;
         border: none;
         border-radius: 4px;
@@ -60,11 +60,11 @@
         cursor: pointer;
 
         &:hover {
-            background-color: darken($primary-color, 10%);
+            background-color: var(--primary-color-darker);
         }
 
         &:active {
-            background-color: darken($primary-color, 20%);
+            background-color: var(--primary-color-darkest);
         }
     }
 }
@@ -86,7 +86,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
+    background-color: var(--bg-color);
     border-radius: 10px;
     width: 40%;
     padding: 10px 20px 10px 20px;
@@ -94,7 +94,7 @@
 
 .modal-button {
     border-radius: 50%;
-    background-color: $primary-color;
+    background-color: var(--primary-color);
     color: #fff;
     padding: 5px 10px;
     cursor: pointer;
