--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -18,10 +18,10 @@
     height: 296px;
     width: 80%;
     max-width: 361px;
-    background-color: #fff;
-    border-color: #ccc;
+    background-color: var(--bg-color);
+    border-color: var(--border-color);
     border-radius: 16px;
-    box-shadow: 2px 2px 6px #bbb;
+    box-shadow: 2px 2px 6px var(--border-shadow-color);
 
     @include breakpoint(md) {
         min-width: 320px;
