--- a/src/components/Projects/ProjectCard/index.scss
+++ b/src/components/Projects/ProjectCard/index.scss
@@ -6,10 +6,10 @@
     padding: 2rem;
     margin: 2rem 4rem;
     width: 26rem;
-    background-color: #fff;
-    border-color: #ccc;
+    background-color: var(--bg-color);
+    border-color: var(--border-color);
     border-radius: 16px;
-    box-shadow: 2px 2px 6px #bbb;
+    box-shadow: 2px 2px 6px var(--border-shadow-color);
 
     .project-links {
         display: flex;
@@ -18,14 +18,14 @@
         width: 100%;
 
         a {
-            color: $primary-color;
+            color: var(--primary-color);
             text-decoration: none;
             font-size: 1.5rem;
             font-weight: 600;
             transition: all 0.2s ease-in-out;
 
             &:hover {
-                color: $emphasis;
+                color: var(--emphasis-color);
             }
         }
     }
